# TransformerEngine-1

./: .clang-format  .gitignore  .pre-commit-config.yaml  Makefile  pylintrc  pyproject.toml  setup.py  setup_build_tools.py
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml
build_tools/: jax.py  pytorch.py  utils.py
build_tools/top_level_pkg/: setup.py
build_tools/wheel_utils/: Dockerfile.x86
docs/: conf.py  installation.rst
docs/api/: common.rst
docs/examples/: quickstart_utils.py
examples/pytorch/mnist/: main.py
qa/L0_license/: copyright_checker.py
tests/: test_fp8.py  test_sanity_import.py  test_transformerengine.py
tests/cpp/: CMakeLists.txt  test_common.cu  test_common.h
tests/cpp/operator/: test_grouped_gemm.cu  test_swizzle.cu
tests/paddle/: test_operators.py
tests/pytorch/: test_fusible_ops.py  test_grouped_tensor.py  test_numerics.py  test_onnx_export.py  test_per_block_pre_rht_amaxes.py
tests/pytorch/distributed/: run_gemm_with_overlap.py
tests/pytorch/fused_attn/: test_fused_attn.py
transformer_engine/: CMakeLists.txt  __init__.py  _version.py
transformer_engine/build_tools/: build_ext.py
transformer_engine/common/: CMakeLists.txt  __init__.py  common.cu  common.h  recipe.py  transformer_engine.cpp  utils.cuh
transformer_engine/common/activation/: gelu.cu
transformer_engine/common/fused_softmax/: scaled_masked_softmax.cu  scaled_upper_triang_masked_softmax.cu
transformer_engine/common/gemm/: cublaslt_gemm.cu  cublaslt_grouped_gemm.cu
transformer_engine/common/hadamard_transform/: hadamard_transform.cu
transformer_engine/common/layer_norm/: ln.h  ln_api.cpp
transformer_engine/common/multi_tensor/: adam.cu  compute_scale.cu  l2norm.cu  multi_tensor_apply.cuh  scale.cu  sgd.cu
transformer_engine/common/recipe/: __init__.py
transformer_engine/common/transpose/: cast_transpose.cu  cast_transpose_fusion.cu  multi_cast_transpose.cu  transpose.cu
transformer_engine/common/util/: cast.cu  pybind_helper.h
transformer_engine/jax/: CMakeLists.txt  setup.py
transformer_engine/jax/csrc/extensions/: amax.cpp
transformer_engine/paddle/: setup.py
transformer_engine/paddle/csrc/: custom_ops.cu
transformer_engine/pytorch/: Makefile  __init__.py  constants.py  cpp_extensions.py  distributed.py  float8_tensor.py  fp8.py  jit.py  module.py  numerics_debug.py  quantization.py  setup.py  softmax.py  transformer.py  utils.py
transformer_engine/pytorch/cpp_extensions/: gemm.py
transformer_engine/pytorch/csrc/: common.cpp  common.cu  common.h  extensions.cu  extensions.h  (+6 more)
(+68 files in other folders)
