# Copyright (c) 2022-2025, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
#
# See LICENSE for license information.

[build-system]
requires = [
    "setuptools>=61.0",
    "cmake>=3.21",
    "wheel",
    "pybind11[global]",
    "ninja",
    "nvidia-mathdx==25.1.1",
    "pip",
    "torch>=2.1",
    "jax>=0.5.0",
    "flax>=0.7.1",
    "nvidia-cuda-runtime>=13.0",
    "nvidia-cublas>=13.0",
    "nvidia-cudnn-cu12",
    "nvidia-cuda-cccl>=13.0",
    "nvidia-cuda-nvcc>=13.0",
    "nvidia-nvtx>=13.0",
    "nvidia-cuda-nvrtc>=13.0",
    "nvidia-curand",
]

# Use legacy backend to import local packages in setup.py
build-backend = "setuptools.build_meta:__legacy__"

